--- a/intro-to-docker/assets/backend/Dockerfile
+++ b/intro-to-docker/assets/backend/Dockerfile
@@ -1,6 +1,6 @@
 # The FROM instruction initializes a new build stage
 # and sets the Base Image for subsequent instructions.
-FROM golang:1.14.3
+FROM golang:1.14.3-alpine
 
 # The WORKDIR instruction sets the working directory
 # for any RUN, CMD, ENTRYPOINT, COPY and ADD instructions
